crates/ruff_python_parser/tests/snapshots/invalid_syntax@assign_stmt_invalid_value_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assign_stmt_invalid_value_expr.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..72,
        body: [
            Assign(
                StmtAssign {
                    node_index: AtomicNodeIndex(..),
                    range: 0..12,
                    targets: [
                        Name(
                            ExprName {
                                node_index: AtomicNodeIndex(..),
                                range: 0..1,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 4..15,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 5..13,
                                        value: BoolOp(
                                            ExprBoolOp {
                                                node_index: NodeIndex(None),
                                                range: 6..13,
                                                op: And,
                                                values: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 6..7,
                                                            id: Name("a"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 12..13,
                                                            id: Name("b"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: AtomicNodeIndex(..),
                    range: 13..25,
                    targets: [
                        Name(
                            ExprName {
                                node_index: AtomicNodeIndex(..),
                                range: 13..14,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 20..34,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 21..23,
                                        value: Int(
                                            42,
                                        ),
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 25..33,
                                        value: Yield(
                                            ExprYield {
                                                node_index: NodeIndex(None),
                                                range: 26..33,
                                                value: Some(
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 32..33,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: AtomicNodeIndex(..),
                    range: 26..43,
                    targets: [
                        Name(
                            ExprName {
                                node_index: AtomicNodeIndex(..),
                                range: 26..27,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 39..58,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 40..42,
                                        value: Int(
                                            42,
                                        ),
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 44..57,
                                        value: YieldFrom(
                                            ExprYieldFrom {
                                                node_index: NodeIndex(None),
                                                range: 45..57,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 56..57,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: AtomicNodeIndex(..),
                    range: 44..60,
                    targets: [
                        Name(
                            ExprName {
                                node_index: AtomicNodeIndex(..),
                                range: 44..45,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 63..78,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 64..76,
                                        value: Lambda(
                                            ExprLambda {
                                                node_index: NodeIndex(None),
                                                range: 65..76,
                                                parameters: Some(
                                                    Parameters {
                                                        range: 72..73,
                                                        node_index: NodeIndex(None),
                                                        posonlyargs: [],
                                                        args: [
                                                            ParameterWithDefault {
                                                                range: 72..73,
                                                                node_index: NodeIndex(None),
                                                                parameter: Parameter {
                                                                    range: 72..73,
                                                                    node_index: NodeIndex(None),
                                                                    name: Identifier {
                                                                        id: Name("x"),
                                                                        range: 72..73,
                                                                        node_index: NodeIndex(None),
                                                                    },
                                                                    annotation: None,
                                                                },
                                                                default: None,
                                                            },
                                                        ],
                                                        vararg: None,
                                                        kwonlyargs: [],
                                                        kwarg: None,
                                                    },
                                                ),
                                                body: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 75..76,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: AtomicNodeIndex(..),
                    range: 61..66,
                    targets: [
                        Name(
                            ExprName {
                                node_index: AtomicNodeIndex(..),
                                range: 61..62,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 65..66,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 70..71,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: AtomicNodeIndex(..),
                            range: 70..71,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x = *a and b
  |      ^^^^^^^ Syntax Error: Boolean expression cannot be used here
2 | x = *yield x
3 | x = *yield from x
  |


  |
1 | x = *a and b
2 | x = *yield x
  |      ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x = *yield from x
4 | x = *lambda x: x
  |


  |
1 | x = *a and b
2 | x = *yield x
3 | x = *yield from x
  |      ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x = *lambda x: x
5 | x = x := 1
  |


  |
2 | x = *yield x
3 | x = *yield from x
4 | x = *lambda x: x
  |      ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
5 | x = x := 1
  |


  |
3 | x = *yield from x
4 | x = *lambda x: x
5 | x = x := 1
  |       ^^ Syntax Error: Expected a statement
  |
