crates/ruff_python_parser/tests/snapshots/invalid_syntax@del_incomplete_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/del_incomplete_target.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: [
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 0..9,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 4..5,
                                id: Name("x"),
                                ctx: Del,
                            },
                        ),
                        Attribute(
                            ExprAttribute {
                                node_index: NodeIndex(None),
                                range: 7..9,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 7..8,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                attr: Identifier {
                                    id: Name(""),
                                    range: 9..9,
                                    node_index: NodeIndex(None),
                                },
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 10..11,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 10..11,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 12..24,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 16..17,
                                id: Name("x"),
                                ctx: Del,
                            },
                        ),
                        Subscript(
                            ExprSubscript {
                                node_index: NodeIndex(None),
                                range: 19..23,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 19..20,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Slice(
                                    ExprSlice {
                                        node_index: NodeIndex(None),
                                        range: 22..23,
                                        lower: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 22..23,
                                                    id: Name("z"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        upper: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 23..23,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                        ),
                                        step: None,
                                    },
                                ),
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | del x, y.
  |          ^ Syntax Error: Expected an identifier
2 | z
3 | del x, y[
4 | z
  |


  |
3 | del x, y[
4 | z
  |
